--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -72,7 +72,7 @@ const structuredData = [
     <meta name="twitter:description" content={description} />
 
     {/* Favicon placeholder – replace with real icon in /public/images */}
-    <link rel="icon" type="image/png" href="/images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
 
     {/* JSON‑LD structured data */}
     <script type="application/ld+json">
