--- a/src/pages/pt/blog/[slug].astro
+++ b/src/pages/pt/blog/[slug].astro
@@ -5,8 +5,11 @@ import { getCollection, type CollectionEntry } from 'astro:content';
 type BlogEntry = CollectionEntry<'blog'>;
 
 export async function getStaticPaths() {
-  const posts = await getCollection('blog', ({ data }) => data.locale === 'pt' && !data.draft);
-  return posts.map((post) => ({
+  const posts: BlogEntry[] = await getCollection(
+    'blog',
+    (entry) => entry.slug.endsWith('.pt') && !entry.data.draft
+  );
+  return posts.map((post: BlogEntry) => ({
     params: { slug: post.slug.replace(/\.(fr|en|de|pt)$/, '') },
     props: { post },
   }));
